# serde_ext_duration

./: .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix
.github/workflows/: publish.yml  release.yml
src/: lib.rs
tests/: deserialize.rs  opts.rs  serialize.rs
