[package]
name = "serde_ext_duration"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Serde (de)serializer for std::time::Duration from int/float/string with multiple output formats"
keywords = ["serde", "duration", "time"]

[lib]
name = "serde_ext_duration"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
serde_yaml = "0.9"
